# UNS-ClaudeJP-6.0.0

./: .env.example  .env.production  .gitignore  .phase1-complete-report.md  .phase4-frontend-integration-complete.md  .pre-commit-config.yaml  .secrets.baseline  .todo-apartment-system.md  8_WEEK_PLAN_COMPLETE.md  ADMIN_CONTROL_PANEL_ANALYSIS.md  ADMIN_CONTROL_PANEL_COMPLETE_REPORT.md  ADMIN_CONTROL_PANEL_ENHANCEMENTS.md  ADMIN_PANEL_ANALYSIS.md  ADMIN_PANEL_AUDIT_REPORT_COMPREHENSIVE.md  ADMIN_PANEL_CODE_COMPARISON.md  ADMIN_PANEL_FINAL_TEST_REPORT.md  ADMIN_PANEL_QUICK_REFERENCE.txt  AGENT_EXECUTION_GUIDE.md  AGENT_ORCHESTRATION_PLAN.md  ANALISIS_APLICACION_COMPLETO.json  ANALISIS_APLICACION_RESUMEN.md  ANALISIS_ARQUITECTONICO_SISTEMA_FOTOS.md  ANALISIS_HOUSING_MODEL.md  ANÁLISIS_CRÍTICO_POST_FASE_3_2025-11-12.md  ANÁLISIS_ÍNDICE_COMPLETO.md  APARTAMENTOS_API_V2_DISEÑO_COMPLETO.md  APARTAMENTOS_EJEMPLOS_USO.md  APARTAMENTOS_V2_STATUS.md  APARTMENT_REPORT_TESTS.md  APARTMENT_TESTS_QUICK_REFERENCE.md  APARTMENT_TESTS_REPORT.md  API_VERIFICATION_GUIDE.md  AUDIT_CANDIDATOS_SISTEMA_2025-11-11.md  AUDIT_COMPLETE_ANALYSIS_2025-11-19.md  AUDIT_COMPLETION_CHECKLIST.md  AUDIT_EXHAUSTIVO_COMPLETO.md  AUDIT_REPORT_2025_11_14.md  AUDIT_REPORT_FINAL_2025-11-19.md  AUDIT_SUMMARY_QUICK_REFERENCE.md  BACKEND_AUDIT_EXECUTIVE_SUMMARY.txt  (+264 more)
backend/: .dockerignore  .env.example  alembic.ini  mypy.ini  mypy_report.txt  pyproject.toml  pytest.ini  pytest.ini.new  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_all_tables.py  002_add_housing_subsidy_field.py  002_add_housing_subsidy_field.py.DISABLED  002_add_yukyu_tables.py  003_add_nyuusha_renrakuhyo_fields.py.disabled  20251110_add_is_corporate_housing.py  2025_11_11_1200_add_photo_sync_trigger.py  2025_11_11_1200_add_photo_sync_trigger.py.DISABLED  2025_11_11_1200_add_search_indexes.py  2025_11_11_1600_add_nyuusha_renrakuhyo_fields.py  2025_11_11_1600_add_nyuusha_renrakuhyo_fields.py.DISABLED  2025_11_12_1804_add_parking_and_plus_fields.py  2025_11_12_1804_add_parking_and_plus_fields.py.DISABLED  2025_11_12_1900_add_tax_rates_to_payroll_settings.py  2025_11_12_1900_add_timer_cards_indexes_constraints.py  2025_11_12_1900_add_timer_cards_indexes_constraints.py.DISABLED  2025_11_12_2000_remove_redundant_employee_id_from_timer_cards.py  2025_11_12_2000_remove_redundant_employee_id_from_timer_cards.py.DISABLED  2025_11_12_2015_add_timer_card_consistency_triggers.py  2025_11_12_2100_add_admin_audit_log_table.py  2025_11_12_2100_add_admin_audit_log_table.py.DISABLED  2025_11_12_2200_add_additional_search_indexes.py  2025_11_12_2200_add_additional_search_indexes.py.DISABLED  2025_11_16_add_ai_budget_table.py  2025_11_16_add_ai_usage_log_table.py.disabled  43b6cf501eed_add_pays_parking_field_to_apartment_assignments.py.DISABLED  5e6575b9bf1b_add_apartment_system_v2_assignments_charges_deductions.py.DISABLED  642bced75435_add_property_type_field_to_apartments.py  68534af764e0_add_additional_charges_and_rent_deductions_tables.py.DISABLED  README-apartment-factory.md  add_performance_indexes.sql  apartment_factory_migration.sql  apartment_factory_sample_queries.sql  create_populate_apartment_factory_function.sql  fix_jlpt_scheduled_column_size.py  initial_baseline.py
backend/alembic/versions_backup/: 2025_10_27_003_json_to_jsonb.py  2025_10_27_007_hybrid_bd_proposal.py  (+12 more)
backend/app/: main.py
backend/cache/: photo_cache.py
backend/config/: photo_extraction_config.py  rate_limits.json
backend/docs/: FILE_VALIDATION_GUIDE.md  MIGRATION_BEST_PRACTICES.md  TESTING_GUIDE.md
backend/extractors/: photo_extraction_strategies.py
backend/performance/: optimization.py
backend/processors/: chunk_processor.py
backend/scripts/: EXTRACT_AND_IMPORT_PHOTOS.bat  IMPLEMENTATION_SUMMARY.md  IMPORTACION_COMPLETA.md  SEED_SALARY_README.md  analyze_access_db.py  analyze_excel_structure.py  analyze_old_photos.py  analyze_table_structure.py  auto_extract_photos_from_databasejp.py  auto_extract_photos_from_databasejp_v2.py  calculate_all_yukyus.py  calculate_yukyu_direct.py  check_factory_names.py  check_photo_order.py  check_photos.py  check_pmi_otsuka.py  clear_candidates.py  compare_excel.py  create_admin_user.py  create_apartments_from_employees.py  create_candidates_from_employees.py  create_employee_view.py  debug_extract_photos.py  debug_photo.py  delete_factory.py  diagnostico_ocr.py.DISABLED  ensure_admin_user.py  export_access_to_json.py  export_candidates_to_json.py  extract_access_attachments.py  extract_access_candidates_with_photos.py  extract_access_with_photos.py  extract_all_photos_urgente.py  extract_ole_photos.py  extract_ole_photos_to_base64.py  extract_photos_fixed.py  extract_photos_from_access_db.py  extract_photos_from_access_db_v52.py  extract_photos_from_ole.py  extract_photos_simple.py  (+69 more)
backend/security/: __init__.py  audit_logger.py  credential_manager.py  encryption_utils.py  input_validator.py
backend/tests/: TEST_SALARY_SYSTEM_README.md  conftest.py  test_additional_providers.py  test_ai_budget_limits.py  test_ai_gateway.py  test_ai_usage_tracking.py  test_analytics.py  test_apartment_services.py  test_apartments_v2_api.py  test_assignment_service.py  test_auth.py  test_auxiliary_services.py  test_batch_optimization.py  test_caching.py  test_employee_matching.py  test_employee_payroll_integration.py  test_employees_e2e.py  test_health.py  test_import_export.py  test_imports.py  test_nyuusha_workflow.py  test_payroll_api.py  test_payroll_api_integration.py  test_payroll_integration.py  test_payroll_integration.py.DISABLED  test_payroll_service.py  test_payroll_timer_card_integration.py  test_photo_extraction.py  test_prompt_optimization.py  test_rate_limiting.py  test_rate_limiting_critical_endpoints.py  test_reports.py  test_resilience.py  test_salary_system.py  test_security.py  test_streaming.py  test_sync_candidate_employee.py  test_timer_card_edge_cases.py  test_timer_card_end_to_end.py  test_timer_card_ocr.py  (+7 more)
backend/utils/: logging_utils.py
backend/validation/: photo_validator.py
(+1315 files in other folders)
