# ========================================
# PyProject Configuration
# UNS-ClaudeJP 6.0.0 Backend
# ========================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uns-claudejp-backend"
version = "6.0.0"
description = "FastAPI backend for UNS-ClaudeJP access management system"
authors = [
    {name = "UNS-ClaudeJP Team", email = "dev@uns-claudejp.com"}
]
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
keywords = ["fastapi", "postgresql", "ocr", "access-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/yourusername/UNS-ClaudeJP-6.0.0"
Documentation = "https://github.com/yourusername/UNS-ClaudeJP-6.0.0/wiki"
Repository = "https://github.com/yourusername/UNS-ClaudeJP-6.0.0"
Issues = "https://github.com/yourusername/UNS-ClaudeJP-6.0.0/issues"

# ========================================
# Tool Configurations
# ========================================

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic/versions
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/alembic/versions/*", "*/migrations/*"]
known_first_party = ["app"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "-p", "no:cacheprovider",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API endpoint tests",
    "service: marks tests as service layer tests",
    "db: marks tests that require database",
    "asyncio: marks tests as async",
]
asyncio_mode = "auto"
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/scripts/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "jose.*",
    "slowapi.*",
    "azure.*",
    "easyocr.*",
    "mediapipe.*",
    "pykakasi.*",
    "pyodbc.*",
    "pdfplumber.*",
    "reportlab.*",
    "pdf2image.*",
    "openpyxl.*",
    "loguru.*",
    "apscheduler.*",
    "prometheus_fastapi_instrumentator.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [
    "tests",
    "alembic",
    "scripts",
    ".venv",
    "venv",
]
tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B309", "B310", "B311", "B312", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B321", "B322", "B323", "B324", "B325", "B401", "B402", "B403", "B404", "B405", "B406", "B407", "B408", "B409", "B410", "B411", "B412", "B413", "B501", "B502", "B503", "B504", "B505", "B506", "B507", "B508", "B509", "B601", "B602", "B603", "B604", "B605", "B606", "B607", "B608", "B609", "B610", "B611", "B701", "B702", "B703"]
skips = ["B101", "B601"]  # B101: assert_used, B601: paramiko_calls (false positives)

[tool.bandit.assert_used]
skips = ["*/tests/*"]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "db"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "E501"]
max-complexity = 15
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "alembic/versions",
    "build",
    "dist",
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:F401,F811",
]

# ========================================
# Development Dependencies
# ========================================

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.7.0",
    "flake8>=7.0.0",
    "bandit>=1.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.0",
    "pytest-json-report>=1.5.0",
    "pre-commit>=3.6.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.0",
    "pytest-json-report>=1.5.0",
    "httpx>=0.28.0",
    "faker>=22.0.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

# ========================================
# Scripts
# ========================================

[project.scripts]
uns-backend = "app.main:main"

# ========================================
# Setuptools Configuration
# ========================================

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["py.typed"]
